--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 		"client": "npm start --prefix frontend",
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
 		"build": "npm run build --prefix frontend",
+		"move-dist": "rm -r backend/build & mv frontend/build backend",
+		"production-ready": "npm run build & npm run move-dist & npm run server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
