Small corrections to keep app working on server.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"client": "npm start --prefix frontend",
 		"dev": "concurrently \"npm run dev:server\" \"npm run client\"",
 		"build": "npm run build --prefix frontend",
-		"move-dist": "rm -r backend/build & mv frontend/build backend",
+		"move-dist": "rm -r backend/dist & mv -v frontend/build backend/dist",
 		"production-ready": "npm run build & npm run move-dist & npm run server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
